[package]
name = "ae-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[dependencies]
anyhow = { version = "*", features = ["backtrace"] }
tracing = "*"
rand = "*"

[dev-dependencies]
criterion = { version = "*", features = ["html_reports"] }
quickcheck = "*"
quickcheck_macros = "*"

[[bench]]
name = "my_benchmark"
harness = false

[profile.release]
opt-level = 3
debug = 1
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "unwind"
incremental = false
codegen-units = 16
rpath = false

[profile.release.package."*"]
opt-level = 3
debug = 1
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16

[profile.dev]
opt-level = 0
debug = 2
debug-assertions = true
overflow-checks = true
lto = "off"
incremental = true
codegen-units = 2048

[profile.dev.package."*"]
opt-level = 0
debug = 2
debug-assertions = true
overflow-checks = true
incremental = true
codegen-units = 2048
